--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an Electrical Engineering Student"
   location         : "Canyon, Texas"
-  email            : "nr.potestas@gmail.com
+  email            : "nr.potestas@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
