--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:nr.potestas@gmail.com"
+      # url: "mailto:nr.potestas@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://ninapotestas.github.io"
