--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ include: ["_pages"]
 # These defaults apply to all files inside _pages/
 defaults:
   - scope:
-      path: ""
+      path: "_pages"
       type: pages
     values:
       layout: single          # Use the 'single' layout from Minimal Mistakes
