--- a/_config.yml
+++ b/_config.yml
@@ -10,18 +10,10 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-defaults:
-  # _posts
-  - scope:
-      path: "_posts"
-      type: posts
-    values:
-      layout: single
-      author_profile: true
-      read_time: true
-      comments: true
-      share: true
-      related: true
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
 
 
 # This tells Jekyll to process Markdown files inside the _pages folder
